--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,6 +4,7 @@ nav {
   top: 0;
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(5px);
+  z-index: 100;
 
   .title {
     font-size: 1.25rem;
