--- a/src/components/FoodItem/FoodItem.scss
+++ b/src/components/FoodItem/FoodItem.scss
@@ -54,6 +54,10 @@
     transition: 0.3s ease all;
     opacity: 0;
 
+    &.hide {
+      display: none;
+    }
+
     button {
       background: #ffffff;
       border: none;
@@ -65,6 +69,11 @@
       width: 35px;
       border-radius: 100%;
       cursor: pointer;
+
+      &.fadeMinus {
+        opacity: 0.5;
+        cursor: default;
+      }
     }
 
     input {
@@ -79,14 +88,39 @@
     }
   }
 
+  .cartAdd {
+    position: absolute;
+    bottom: 10%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    border: none;
+    outline: none;
+    display: flex;
+    align-items: center;
+    width: fit-content;
+    font-size: 1rem;
+    z-index: 50;
+    transition: 0.3s ease all;
+    opacity: 0;
+    background: #ffffff;
+    padding: 0.5rem;
+    gap: 0.5rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+
+    svg {
+      font-size: 1.5rem;
+    }
+  }
+
   &:hover {
     .banner {
       filter: blur(5px);
     }
 
-    .cartMenu {
+    .cartMenu,
+    .cartAdd {
       bottom: 50%;
-      left: 50%;
       opacity: 1;
     }
   }
