--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,20 +1,46 @@
 nav {
-  padding: 1rem 2rem;
+  padding: 0.75rem 2rem;
   position: sticky;
   top: 0;
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(5px);
   z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 
-  .title {
-    font-size: 1.25rem;
-    font-weight: 300;
-    cursor: pointer;
+  a {
     display: inline-block;
     border: none;
 
     &:hover {
       background: unset;
+    }
+  }
+
+  .title {
+    font-size: 1.25rem;
+    font-weight: 300;
+  }
+
+  .cart {
+    font-size: 2rem;
+    cursor: pointer;
+    position: relative;
+
+    .itemsNumber {
+      position: absolute;
+      height: 20px;
+      width: 20px;
+      background: #ffffff;
+      transform: translate(50%, -50%);
+      top: 5px;
+      right: 0;
+      overflow: hidden;
+      display: grid;
+      place-content: center;
+      font-size: 1.25rem;
+      border-radius: 1rem;
     }
   }
 }
