--- a/src/pages/FoodInfo/FoodInfo.scss
+++ b/src/pages/FoodInfo/FoodInfo.scss
@@ -58,6 +58,11 @@
         border-radius: 100%;
         cursor: pointer;
         box-shadow: 0 0 1rem -0.5rem #000000;
+
+        &.fadeMinus {
+          opacity: 0.5;
+          cursor: default;
+        }
       }
 
       input {
@@ -68,6 +73,25 @@
         font-size: 1.5rem;
         height: 35px;
         width: 35px;
+      }
+    }
+
+    .cartAdd {
+      border: none;
+      outline: none;
+      display: flex;
+      align-items: center;
+      width: fit-content;
+      font-size: 1rem;
+      background: #ffffff;
+      padding: 0.5rem;
+      gap: 0.5rem;
+      border-radius: 0.5rem;
+      box-shadow: 0 0 0.75rem -0.25rem #00000055;
+      cursor: pointer;
+
+      svg {
+        font-size: 1.5rem;
       }
     }
   }
