--- a/src/pages/Cart/Cart.scss
+++ b/src/pages/Cart/Cart.scss
@@ -132,9 +132,40 @@
           border: 2px solid #000000cc;
 
           &:hover {
+            border: 2px solid transparent;
             background: #000000cc;
             color: #ffffff;
           }
+        }
+      }
+    }
+  }
+}
+
+// Responsive
+@media only screen and (max-width: 768px) {
+  .cartMain {
+    flex-direction: column-reverse;
+
+    .right {
+      width: 100%;
+    }
+
+    .left {
+      .cartItem {
+        width: 100%;
+
+        .banner {
+          width: 75px;
+        }
+
+        .title {
+          display: -webkit-box;
+          white-space: unset;
+          width: auto;
+          font-size: 1rem;
+          -webkit-line-clamp: 2;
+          -webkit-box-orient: vertical;
         }
       }
     }
