--- a/src/pages/FoodInfo/FoodInfo.scss
+++ b/src/pages/FoodInfo/FoodInfo.scss
@@ -159,3 +159,15 @@
     }
   }
 }
+
+// Responsive
+@media only screen and (max-width: 768px) {
+  .foodMain {
+    flex-direction: column;
+    gap: 3rem;
+
+    .left {
+      gap: 1rem;
+    }
+  }
+}
